# kaos

./: .env  .gitignore  README.md  catalog_setup.py  pyproject.toml  try.html
examples/: continuous_generation.ipynb  plot_libs.ipynb  range_study.py  research_tests.ipynb  sessions_study.ipynb  study_london_session.ipynb  tvdatafeed.ipynb
examples/dummy_system/: first.ipynb  first.py
kaos/: engine.py  log_utils.py  strategy.py  time_utils.py  visualization.py
kaos/analysis/: pdas.py  time_series.py
kaos/data/: aggregation.py  data.py  enums.py  instruments.py  loading.py  symbol.py
revelation/: engine.py  log_utils.py  research.py  time_utils.py  visualization.py
revelation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
revelation/analysis/: enums.py  pdas.py  sessions.py
revelation/data/: aggregation.py  data.py  enums.py  instruments.py  loading.py  symbol.py
revelation/scripts/: tv_data_firstrate.ipynb
revelation/visualization/: package-lock.json  visualization.py
revelation/visualization/vue-tv/: README.md  package-lock.json  package.json
revelation/visualization/vue-tv/src/: App.vue  main.js
revelation/visualization/vue-tv/src/components/: Chart.vue
src/: data.py  engine.py  orders.py  strategy.py
src/data/: data.py  loading.py
src/revelation/: engine.py  strategy.py  time_utils.py  visualization.py
src/revelation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/revelation/analysis/: pdas.py
src/revelation/data/: data.py  enums.py  loading.py
