[project]
name = "revelation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "nautilus-trader>=1.216.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "revelation",
]

[tool.uv.sources]
revelation = { workspace = true }
