[project]
name = "revelation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.7.2",
    "dash>=3.0.4",
    "dotenv>=0.9.9",
    "holoviews>=1.20.2",
    "hvplot>=0.11.3",
    "lightweight-charts>=2.1",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
]
